# advent_of_code_2025

./: .gitignore  LICENSE  README.md  pyproject.toml
advent_of_code/: __init__.py  main.py
advent_of_code/day/: __init__.py  day_1.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_four.py  day_one.py  day_three.py  day_two.py
advent_of_code/helper_files/: io_operations.py
advent_of_code_tests/: day_one_tests.py
test_advent_of_code/: test_day_1.py  test_day_2.py  test_day_3.py  test_day_4.py  test_day_5.py  test_day_6.py  test_day_one.py  test_day_three.py  test_day_two.py
