# Source - https://stackoverflow.com/a/50193944
# Posted by Niko Fohr, modified by community. See post 'Timeline' for change history
# Retrieved 2025-12-07, License - CC BY-SA 4.0

[project]
name = "advent_of_code"
version = "0.1.0"
description = "My solution to the advent of code 2025 challenges"

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

